create-ec2.tf
provider "aws" {
  region = "ap-south-1"
}
#Create security group with firewall rules
resource "aws_security_group" "my_security_group" {
  name        = var.security_group
  description = "security group for Ec2 instance"
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
 ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
 # outbound from jenkis server
  egress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags= {
    Name = var.security_group
  }
}
resource "aws_instance" "ec2_instance2" {
    ami = "${var.ami_id}"
    count = 1
    instance_type = "t2.micro"
    key_name = "${var.ami_key_pair_name}"
    security_groups= [var.security_group]
    tags= {
    Name = "terraform-created-server"
  }
}
